--- a/HydrologyAnalysis_QPE/src/AtRework/ReadMe
+++ b/HydrologyAnalysis_QPE/src/AtRework/ReadMe
@@ -3,6 +3,7 @@
 //----------------------------------------------------------------
 
 root
+ |---AsciiData(folder)
  |
  |---RainfallData(folder)
  |			|
